# code-samples

./: .env.example  .gitignore  skills-lock.json
adk_skills/: .env.example  README.md  demo_agent.py  main.py  pyproject.toml
adk_skills/customer-support-triage/: SKILL.md
adk_skills/customer-support-triage/references/: PRIORITY_MATRIX.md
adk_skills/scripts/: run_check.sh  run_cli.sh  run_web.sh  setup.sh  smoke_test.sh
adk_skills/sql-analytics-helper/: SKILL.md
adk_skills/sql-analytics-helper/references/: QUERY_CHECKLIST.md
adk_skills/src/adk_skills_demo_agent/: agent.py  cli.py  smoke_test.py
adk_skills/src/adk_skills_demo_agent/.adk/: session.db
ai-coding-agents/doc-sync/: README.md  doc-sync-reminder.mdc
ai-coding-agents/doc-sync/sync-project-docs/: SKILL.md
